# shigalibrary-nonofficial-app

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
books/: admin.py  models.py  urls.py  views.py  views2.py
books/migrations/: 0001_initial.py  0002_remove_userbook_book_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_password_alter_userbook_unique_together.py
books/static/css/: external_link_window.css  fontawesome_icon.css  home.css  search_result.css
books/static/js/: book_management.js  scan_modal.js  search_result.js
books/templates/books/: add_book.html  archive.html  book_list.html  demo_search_book.html  example_url.html  google_search_result.html  home.html  home2.html  index.html  main_content.html  rakuten_search_result.html  scan_indexpage.html  scan_modal.html  scan_result.html  search_book.html
library_app/: settings.py  urls.py
