[project]
name = "uv-env-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.6",
    "python-decouple>=3.8",
    "requests>=2.32.3",
]
